--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -1,14 +1,7 @@
-FROM komljen/jdk-oracle
-MAINTAINER Alen Komljen <alen.komljen@live.com>
+FROM tomcat:8.0-alpine
+#LABEL maintainer="deepak@softwareyoga.com"
 
-ENV JAVA_HEAP_SIZE 512
-ENV JAVA_HOME /usr/lib/jvm/java-7-oracle
+ADD vprofile-v2.war /usr/local/tomcat/webapps/
 
-RUN \
-  apt-get update && \
-  apt-get -y install \
-          tomcat7 && \
-  rm -rf /var/lib/apt/lists/*
-
-RUN sed -i "s|#JAVA_HOME=.*|JAVA_HOME=$JAVA_HOME|g" /etc/default/tomcat7
-RUN sed -i "s|-Xmx128m|-Xmx${JAVA_HEAP_SIZE}m|g" /etc/default/tomcat7
+EXPOSE 8080
+CMD ["catalina.sh", "run"]
